--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,11 @@
         android:theme="@style/Theme.TarazIOT"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ConfigSensor22Activity"
+            android:name=".ChooseDeviceActivity"
             android:exported="false" />
+        <activity
+            android:name=".ConfigSensor22Activity"
+            android:exported="true"></activity>
         <activity
             android:name=".ConfigSensorActivity"
             android:exported="false" />
@@ -36,6 +39,9 @@
             android:exported="false" />
         <activity
             android:name=".SplashScreenActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".ConfigServerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,9 +49,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ConfigServerActivity"
-            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
