--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/taraz_n_logo"
         android:label="FTS Alarm"
-        android:roundIcon="@drawable/logo"
+        android:roundIcon="@drawable/taraz_n_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.TarazIOT"
         android:usesCleartextTraffic="true">
